--- a/Dormify.csproj
+++ b/Dormify.csproj
@@ -76,38 +76,14 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="RegAnnouncement.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="RegAnnouncement.Designer.cs">
-      <DependentUpon>RegAnnouncement.cs</DependentUpon>
-    </Compile>
-    <Compile Include="RegAttendance.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="RegAttendance.Designer.cs">
-      <DependentUpon>RegAttendance.cs</DependentUpon>
-    </Compile>
-    <Compile Include="RegLiabilities.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="RegLiabilities.Designer.cs">
-      <DependentUpon>RegLiabilities.cs</DependentUpon>
-    </Compile>
-    <Compile Include="RegTimeIn_Out.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="RegTimeIn_Out.Designer.cs">
-      <DependentUpon>RegTimeIn_Out.cs</DependentUpon>
-    </Compile>
-    <Compile Include="RegularMain.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="RegularMain.Designer.cs">
-      <DependentUpon>RegularMain.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegMain.Designer.cs">
+      <DependentUpon>RegMain.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AdminAnnouncement.resx">
       <DependentUpon>AdminAnnouncement.cs</DependentUpon>
     </EmbeddedResource>
@@ -123,21 +99,6 @@
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="RegAnnouncement.resx">
-      <DependentUpon>RegAnnouncement.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="RegAttendance.resx">
-      <DependentUpon>RegAttendance.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="RegLiabilities.resx">
-      <DependentUpon>RegLiabilities.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="RegTimeIn_Out.resx">
-      <DependentUpon>RegTimeIn_Out.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="RegularMain.resx">
-      <DependentUpon>RegularMain.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -148,6 +109,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RegMain.resx">
+      <DependentUpon>RegMain.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -202,6 +166,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\eye %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\profile-user %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\circle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\announcementpic.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\attendancepic.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\mail.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
