--- a/Dormify.csproj
+++ b/Dormify.csproj
@@ -116,6 +116,12 @@
     <Compile Include="AdminMain.Designer.cs">
       <DependentUpon>AdminMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminMessages.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminMessages.Designer.cs">
+      <DependentUpon>AdminMessages.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,11 +130,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegGuests.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegGuests.Designer.cs">
+      <DependentUpon>RegGuests.cs</DependentUpon>
+    </Compile>
     <Compile Include="RegMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="RegMain.Designer.cs">
       <DependentUpon>RegMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RegMessages.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegMessages.Designer.cs">
+      <DependentUpon>RegMessages.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AdminAnnouncement.resx">
       <DependentUpon>AdminAnnouncement.cs</DependentUpon>
@@ -141,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminMain.resx">
       <DependentUpon>AdminMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminMessages.resx">
+      <DependentUpon>AdminMessages.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -155,8 +176,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RegGuests.resx">
+      <DependentUpon>RegGuests.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="RegMain.resx">
       <DependentUpon>RegMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RegMessages.resx">
+      <DependentUpon>RegMessages.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -232,6 +259,15 @@
   <ItemGroup>
     <Analyzer Include="packages\Microsoft.CodeAnalysis.Analyzers.3.3.4\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="packages\Microsoft.CodeAnalysis.Analyzers.3.3.4\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\mail %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\guest.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\exit.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
