--- a/Dormify.csproj
+++ b/Dormify.csproj
@@ -269,6 +269,12 @@
   <ItemGroup>
     <None Include="Assets\exit.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\announcementpic %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\announcementpic %281%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
