--- a/Dormify.csproj
+++ b/Dormify.csproj
@@ -92,6 +92,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminAddAccount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminAddAccount.Designer.cs">
+      <DependentUpon>AdminAddAccount.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminAnnouncement.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,6 +154,9 @@
     <Compile Include="RegMessages.Designer.cs">
       <DependentUpon>RegMessages.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdminAddAccount.resx">
+      <DependentUpon>AdminAddAccount.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AdminAnnouncement.resx">
       <DependentUpon>AdminAnnouncement.cs</DependentUpon>
     </EmbeddedResource>
@@ -181,6 +190,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RegMain.resx">
       <DependentUpon>RegMain.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="RegMessages.resx">
       <DependentUpon>RegMessages.cs</DependentUpon>
@@ -274,6 +284,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\announcementpic %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\add account.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
