--- a/Dormify.csproj
+++ b/Dormify.csproj
@@ -110,9 +110,7 @@
     <Compile Include="AdminAttendance.Designer.cs">
       <DependentUpon>AdminAttendance.cs</DependentUpon>
     </Compile>
-    <Compile Include="AdminLiabilities.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="AdminLiabilities.cs" />
     <Compile Include="AdminLiabilities.Designer.cs">
       <DependentUpon>AdminLiabilities.cs</DependentUpon>
     </Compile>
